--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -6,15 +6,13 @@ project_name: "{{ .Env.PROJECT_NAME }}"
 universal_binaries:
   - id: lotus
     replace: true
-    ids:
-      - lotus
-    name_template: "{{ .Env.PROJECT_NAME }}"
+    name_template: lotus
   - id: lotus-miner
     replace: true
-    ids:
-      - lotus-miner
-      - lotus-worker
-    name_template: "{{ .Env.PROJECT_NAME }}-miner"
+    name_template: lotus-miner
+  - id: lotus-worker
+    replace: true
+    name_template: lotus-worker
 builds:
   - id: lotus
     binary: lotus
